@@ -128,12 +128,23 @@ class TestClone(unittest.TestCase):
         # FIXME: check that the stuff in missing is ok
         print missing
 
-    def test_modfied_conffiles(self):
+    def test_modified_conffiles(self):
         clone = AptClone()
         modified = clone._find_modified_conffiles("./data/mock-system")
         self.assertEqual(
             modified, set(["./data/mock-system/etc/conffile.modified"]))
-        
+
+    def test_unowned_in_etc(self):
+        apt_pkg.config.set(
+            "Dir::state::status", 
+            "./data/mock-system/var/lib/dpkg/status")
+        clone = AptClone()
+        unowned = clone._find_unowned_in_etc("./data/mock-system")
+        self.assertFalse("/etc/conffile.modified" in unowned)
+        self.assertFalse("/etc/conffile.not-modified" in unowned)
+        self.assertTrue("/etc/unowned-file" in unowned)
+
+
 
 if __name__ == "__main__":
     unittest.main()
