@@ -5,6 +5,8 @@ apt-clone (0.2.1) UNRELEASED; urgency=low
       Rogerio. Brito
   * apt-clone.8:
     - add simple man page
+  * apt_clone.py:
+    - fix tar prefix detection
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 19 Sep 2011 10:01:58 +0200
 
